[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "release-helper"
dynamic = ["version", "description"]
readme = "README.md"

requires-python = ">=3.7"
dependencies = [
  "click",
  "packaging",
]
authors = [
  { name = "Pradyun Gedam", email = "mail@pradyunsg.me" },
]

classifiers = [
  "License :: OSI Approved :: MIT License",
]
license = { file = "LICENSE" }

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "pytest-xdist",
]
docs = ["sphinx"]

[project.scripts]
release-helper = "release_helper.__main__:main"

[project.urls]
GitHub = "https://github.com/pradyunsg/release-helper"

[tool.flit.module]
name = "release_helper"

[tool.isort]
profile = "black"
